--- a/exercises/hover-galleries/index.html
+++ b/exercises/hover-galleries/index.html
@@ -7,33 +7,36 @@
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
+        <div class="section-grid">
         <div class="section">
             <div class="card-container1">
-        <div class="card1">
-            <div class="card-content1">
-                <h2>Card 1</h2>
-                <p>This is the first card.</p>
+                <div class="card1">
+                    <div class="card-content1">
+                        <h2>Card 1</h2>
+                        <p>This is the first card.</p>
+                    </div>
+                </div>
+                <div class="card1">
+                    <div class="card-content1">
+                        <h2>Card 2</h2>
+                        <p>This is the second card.</p>
+                    </div>
+                </div>
+                <div class="card1">
+                    <div class="card-content1">
+                        <h2>Card 3</h2>
+                        <p>This is the third card.</p>
+                    </div>
+                </div>
+                <div class="card1">
+                    <div class="card-content1">
+                        <h2>Card 4</h2>
+                        <p>This is the fourth card.</p>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="card1">
-            <div class="card-content1">
-                <h2>Card 2</h2>
-                <p>This is the second card.</p>
-            </div>
-        </div>
-        <div class="card1">
-            <div class="card-content1">
-                <h2>Card 3</h2>
-                <p>This is the third card.</p>
-            </div>
-        </div>
-        <div class="card1">
-            <div class="card-content1">
-                <h2>Card 4</h2>
-                <p>This is the fourth card.</p>
-            </div>
-        </div>
-    </div>
+
     <div class="section">
         <div class="card-container2">
             <div class="card2">
@@ -60,9 +63,8 @@
                     <p>This is the content of Card 4.</p>
                 </div>
             </div>
-    </div>
-
-
+        </div>
+    </div> 
 
     <div class="section">
         <div class="card-container3">
@@ -108,6 +110,7 @@
             </div>
         </div>
     </div>
+    </div>
 
-    </body>
+</body>
 </html>
