--- a/exercises/hover-galleries/index.html
+++ b/exercises/hover-galleries/index.html
@@ -12,26 +12,26 @@
             <div class="card-container1">
                 <div class="card1">
                     <div class="card-content1">
-                        <h2>Card 1</h2>
-                        <p>This is the first card.</p>
+                        <h2>I DO NOTHING</h2>
+                        <p>This is just a normal card.</p>
                     </div>
                 </div>
                 <div class="card1">
                     <div class="card-content1">
-                        <h2>Card 2</h2>
-                        <p>This is the second card.</p>
+                        <h2>STILL NOTHING</h2>
+                        <p>I do nothing, I swear.</p>
                     </div>
                 </div>
                 <div class="card1">
                     <div class="card-content1">
-                        <h2>Card 3</h2>
-                        <p>This is the third card.</p>
+                        <h2>STOP TRYING</h2>
+                        <p>I do not do anything</p>
                     </div>
                 </div>
                 <div class="card1">
                     <div class="card-content1">
-                        <h2>Card 4</h2>
-                        <p>This is the fourth card.</p>
+                        <h2>I DO NOT DO ANYTHING</h2>
+                        <p>weeeeeeeeeeee...... how would you feel if someone kept spinning you</p>
                     </div>
                 </div>
             </div>
@@ -40,27 +40,27 @@
     <div class="section">
         <div class="card-container2">
             <div class="card2">
-                <div class="card-content2">
-                    <h2>Card 1</h2>
-                    <p>This is the content of Card 1.</p>
+                <div class="card-content2-1">
+                    <h2>Red Glow</h2>
+                    <p>This card has a red glow to it.</p>
                 </div>
             </div>
             <div class="card2">
-                <div class="card-content2">
-                    <h2>Card 2</h2>
-                    <p>This is the content of Card 2.</p>
+                <div class="card-content2-2">
+                    <h2>Yellow Glow</h2>
+                    <p>This card has a yellow glow to it.</p>
                 </div>
         </div>
             <div class="card2">
-                <div class="card-content2">
-                    <h2>Card 3</h2>
-                    <p>This is the content of Card 3.</p>
+                <div class="card-content2-3">
+                    <h2>Green Glow</h2>
+                    <p>This card has a green glow to it.</p>
                 </div>
             </div>
             <div class="card2">
-                <div class="card-content2">
-                    <h2>Card 4</h2>
-                    <p>This is the content of Card 4.</p>
+                <div class="card-content2-4">
+                    <h2>Blue Glow</h2>
+                    <p>This card has a blue glow to it.</p>
                 </div>
             </div>
         </div>
