--- a/exercises/dropdown-menu-site/adopt.html
+++ b/exercises/dropdown-menu-site/adopt.html
@@ -10,9 +10,10 @@
     <body>
         <header>
             <nav>
-                <div class="logo">
-                    <a href="index.html">AdoptMePlz</a>
-                </div>
+                <a href="index.html" class="navbar-logo">
+                    <img src="images/logo2.png" alt="AdoptMePlz Logo">
+                    Manatee Humane Society
+                </a>
                 <ul>
                     <li class="dropdown">
                         <a href="adopt.html">Adopt</a>
@@ -34,17 +35,17 @@
                 <div class="gallery-item">
                     <img src="images/dog1.1.jpg" alt="Animal 1">
                     <a class="gallery-link" href="animal1.html"><h2>Laula</h2></a>
-                    <p>Description of Animal 1</p>
+                    <p>Meet Laula, a radiant 2.5-year-old golden retriever mix with a heart of gold. She's a cuddle enthusiast and an adventurous spirit, always ready for hikes and outdoor fun. Laula's sweet nature and loving demeanor make her the perfect lifelong companion. If you're looking for a loyal friend to share your adventures and snuggles, adopt Laula and experience a lifetime of love.</p>
                 </div>
                 <div class="gallery-item">
                     <img src="images/dog2.1.jpg" alt="Animal 1">
                     <a class="gallery-link" href="animal2.html"><h2>Remi</h2></a>
-                    <p>Description of Animal 1</p>
+                    <p>Meet Remi, a 9-month-old purebred Border Collie with boundless energy and intelligence. His previous owners realized his energy was too much for them, but for the right family, Remi is an incredible companion. He's a smart boy who loves learning tricks and thrives on mental stimulation. Despite his high energy, Remi knows how to relax and enjoys quality downtime. If you're an active family seeking an intelligent and devoted canine companion, don't miss the chance to adopt Remi and embark on a lifetime of fun, learning, and love together.</p>
                 </div>
                 <div class="gallery-item">
                     <img src="images/dog3.1.jpg" alt="Animal 1">
                     <a class="gallery-link" href="animal3.html"><h2>Nova</h2></a>
-                    <p>Description of Animal 1</p>
+                    <p>Meet Nova, the 4-year-old golden retriever who embodies loyalty and devotion. He's highly intelligent and thrives on being by your side, whether for outdoor adventures or as a dedicated couch potato. Nova forms deep connections and offers unwavering loyalty to his chosen person, but he's also friendly and adaptable, getting along with kids and other animals. If you're looking for a smart, loving, and versatile furry friend to be your couch buddy and adventure companion, Nova is your perfect match. Adopt Nova today and experience the boundless love and devotion of a golden retriever.</p>
                 </div>
             </div>
         </section>
