--- a/exercises/dropdown-menu-site/animal2.html
+++ b/exercises/dropdown-menu-site/animal2.html
@@ -18,9 +18,9 @@
                     <li class="dropdown">
                         <a href="adopt.html">Adopt</a>
                         <div class="dropdown-content">
-                            <a href="animal1.html">Animal 1</a>
-                            <a href="animal2.html">Animal 2</a>
-                            <a href="animal3.html">Animal 3</a>
+                            <a href="animal1.html">Laula</a>
+                            <a href="animal2.html">Remi</a>
+                            <a href="animal3.html">Nova</a>
                         </div>
                     </li>
                     <li><a href="volunteer.html">Volunteer</a></li>
@@ -31,10 +31,18 @@
         <section class="animal-info">
             <h1>Remi</h1>
             <img src="images/dog2.1.jpg" alt="Animal 1 Image">
+            <h4>Introducing Remi: Your Energetic and Intelligent Companion!</h4>
             <p>
-                This is Animal 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                Nulla pretium lobortis massa, eu lacinia odio venenatis vel. Nullam sit amet 
-                turpis vel lectus convallis volutpat. Sed id luctus massa.
+                Meet Remi, a charming 9-month-old purebred Border Collie with boundless energy and a brilliant mind. Remi's previous owners, while well-intentioned, discovered that his energy was a bit too much for them, as they may not have fully realized the energy levels of a Border Collie when they first brought him home. However, his enthusiasm and intelligence make him an incredible companion for the right family.
+            </p>
+            <p>
+                Remi is a smart boy who's always eager to learn and show off his repertoire of tricks. His agility and quick thinking will astound you as he effortlessly follows your commands. Whether it's fetching a ball, performing dazzling tricks, or learning new skills, Remi is up for the challenge, and he thrives on mental stimulation. 
+            </p>
+            <p>
+                While Remi is undeniably energetic, he understands the value of balance. He can be the life of the party during playtime, but once he's had his fill of fun activities, he knows how to unwind and enjoy some downtime. Remi is the type of dog who can happily relax with you after a day of adventure, snuggled up on the couch, content in your company. 
+            </p>
+            <p>
+                If you're an active family looking for an intelligent and devoted canine companion to keep up with your adventures, Remi is the perfect match. He's ready to be your loyal sidekick, challenging your mind and making every day an exciting journey. Don't miss the opportunity to bring Remi into your life, where his energy and intelligence will be cherished and nurtured. Adopt Remi today and embark on a lifetime of companionship filled with fun, learning, and love.
             </p>
             <div class="gallery">
                 <img src="images/dog2.2.jpg" alt="Animal 1 Photo 2">
