--- a/exercises/dropdown-menu-site/animal1.html
+++ b/exercises/dropdown-menu-site/animal1.html
@@ -19,9 +19,9 @@
                     <li class="dropdown">
                         <a href="adopt.html">Adopt</a>
                         <div class="dropdown-content">
-                            <a href="animal1.html">Animal 1</a>
-                            <a href="animal2.html">Animal 2</a>
-                            <a href="animal3.html">Animal 3</a>
+                            <a href="animal1.html">Laula</a>
+                            <a href="animal2.html">Remi</a>
+                            <a href="animal3.html">Nova</a>
                         </div>
                     </li>
                     <li><a href="volunteer.html">Volunteer</a></li>
