page style update

--- a/about.html
+++ b/about.html
@@ -5,29 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
     <link href="z-css/about.css" rel="stylesheet">
+    <link rel="stylesheet" href="z-css/nav-footer.css">
 </head>
 <body>
-    <nav class="navbar">
-        <div class="logo">
-            <a href="index.html">MyLogo</a>
-        </div>
-        <ul class="nav-links">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="portfolio.html">Portfolio</a></li>
-            <li><a href="photo.html">Photo's</a></li>
-            <li><a href="about">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
-    </nav>
-
     <header>
+        <nav>
+            <div class="logo">
+                <img src="logo.png" alt="">
+            </div>
+            <ul class="nav-links">
+                <li><a href="home.html">Home</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="photo.html">Photo's</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <header class="title">
         <h1>About Me</h1>
     </header>
-    <section class="container">
-        <div class="profile-image">
+
+    <section class="about">
+        <div class="about-image">
             <img src="z-images/about-me-image.jpg" alt="Profile Image">
         </div>
-        <div class="profile-content">
+        <div class="about-card">
+        <div class="about-content">
             <h2>Howdy, I'm Graci Edinger</h2>
             <p>
                 I've always had a creative side to me, but have always been a bit of a computer nerd. So I found the best of the both worlds!
@@ -35,13 +39,12 @@
             <p>
                 Around 5 to 7 years ago, I experienced a captivating immersion into the world of photography. This initial fascination subsequently sparked a journey of exploration into the realm of Lightroom, which seamlessly propelled me into the realm of Adobe products. Gradually, I embarked on a self-guided process of mastering their applications in a versatile manner. Periodically, I engaged in projects intended for sale and beyond. As time progressed, the notion crystallized that this could potentially evolve into a lifelong pursuit. And so, here I stand today, driven by the realization that photography could indeed shape my enduring path.
             </p>
-            
-            <p>Feel free to contact me at <a href="mailto:youremail@example.com">email@email.com</a></p>
+        </div>
         </div>
     </section>
 
     <footer>
-        <p>&copy; 2023 Graci Edinger</p>
+        <p>&copy; 2023 Graci Edinger Portfolio</p>
     </footer>
 
 </body>
