--- a/photo.html
+++ b/photo.html
@@ -4,24 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="z-css/photo.css" rel="stylesheet">
+    <link rel="stylesheet" href="z-css/nav-footer.css">
     <title>Photo Gallery</title>
 </head>
 <body>
-    <nav class="navbar">
-        <div class="logo">
-            <a href="index.html">MyLogo</a>
-        </div>
-        <ul class="nav-links">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="portfolio.html">Portfolio</a></li>
-            <li><a href="photo.html">Photo's</a></li>
-            <li><a href="about">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
-    </nav>
     <header>
-        <h1>Photo Gallery</h1>
+        <nav>
+            <div class="logo">
+                <img src="logo.png" alt="">
+            </div>
+            <ul class="nav-links">
+                <li><a href="home.html">Home</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="photo.html">Photo's</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
     </header>
+    
+    <header class="title">
+        <h1>Photo Gallery</h1>
+      </header>
 
     <div class="gallery">
         <div class="tags">
@@ -203,7 +207,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2023 Graci Edinger</p>
+        <p>&copy; 2023 Graci Edinger Portfolio</p>
     </footer>
     <script src="galleryscript.js"></script>
 </body>
