--- a/portfolio.html
+++ b/portfolio.html
@@ -3,95 +3,130 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="z-css/gallery.css" rel="stylesheet">
+    <link href="z-css/portfolio.css" rel="stylesheet">
+    <link rel="stylesheet" href="z-css/nav-footer.css">
     <title>Portfolio</title>
 </head>
 <body>
-    <nav class="navbar">
-        <div class="logo">
-            <a href="index.html">MyLogo</a>
-        </div>
-        <ul class="nav-links">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="portfolio.html">Portfolio</a></li>
-            <li><a href="photo.html">Photo's</a></li>
-            <li><a href="about">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
-    </nav>
     <header>
-        <h1>Portfolio</h1>
+        <nav>
+            <div class="logo">
+                <img src="logo.png" alt="">
+            </div>
+            <ul class="nav-links">
+                <li><a href="home.html">Home</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="photo.html">Photo's</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <header class="title">
+        <h1>Project Portfolio</h1>
     </header>
 
     <section class="gallery">
         <div class="portfolio-item">
-            <img src="z-images/project1.png" alt="">
-            <a href="z-portfolio/project1.html"><h2>Web Design GUI</h2></a>
+            <a href="z-portfolio/project1.html">
+                <img src="z-images/project1.png" alt="">
+                <h2>Web Design GUI</h2>
             <p>A simplistic yet bright web design using Adobe XD.</p>
+            </a>
         </div>
 
         <div class="portfolio-item">
-            <img src="z-images/project2.jpg" alt="">
-            <a href="z-portfolio/project2.html"><h2>Photo Bashing</h2></a>
+            <a href="z-portfolio/project2.html">
+                <img src="z-images/project2.jpg" alt="">
+                <h2>Photo Bashing</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </a>
+        </div>
+
+        <div class="portfolio-item">           
+            <a href="z-portfolio/project3.html">
+                <img src="z-images/project3.png" alt="">
+                <h2>Character Concept</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </a>
+            
+        </div>
+        <div class="portfolio-item">           
+            <a href="z-portfolio/project4.html">
+                <img src="z-images/project4.png" alt="">
+                <h2>Style Guide</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </a>
         </div>
 
         <div class="portfolio-item">
-            <img src="z-images/project3.png" alt="">
-            <a href="z-portfolio/project3.html"><h2>Character Concept</h2></a>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        </div>
-        <div class="portfolio-item">
-            <img src="z-images/project4.png" alt="">
-            <a href="z-portfolio/project4.html"><h2>Style Guide</h2></a>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <a href="z-portfolio/project5.html">
+                <img src="z-images/project5.png" alt="">
+                <h2>National Park Poster</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </a>
         </div>
 
         <div class="portfolio-item">
-            <img src="z-images/project5.png" alt="">
-            <a href="z-portfolio/project5.html"><h2>National Park Poster</h2></a>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <a href="z-portfolio/project6.html">
+                <img src="z-images/project6.png" alt="">
+                <h2>project</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </a>
         </div>
 
         <div class="portfolio-item">
-            <img src="z-images/" alt="">
-            <a href="z-portfolio/project6.html"><h2>Project 1</h2></a>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <a href="z-portfolio/project7.html">
+                <img src="z-images/project7.png" alt="">
+                <h2>project</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </a>
         </div>
-        <div class="portfolio-item">
-            <img src="z-images/" alt="">
-            <a href="z-portfolio/project7.html"><h2>Project 1</h2></a>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+
+                <div class="portfolio-item">
+            <a href="z-portfolio/project8.html">
+                <img src="z-images/project8.png" alt="">
+                <h2>project</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </a>
         </div>
+
         <div class="portfolio-item">
-            <img src="z-images/" alt="">
-            <a href="z-portfolio/project8.html"><h2>Project 1</h2></a>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <a href="z-portfolio/project9.html">
+                <img src="z-images/project9.png" alt="">
+                <h2>project</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </a>
         </div>
+
         <div class="portfolio-item">
-            <img src="z-images/" alt="">
-            <a href="z-portfolio/project9.html"><h2>Project 1</h2></a>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <a href="z-portfolio/project10.html">
+                <img src="z-images/project10.png" alt="">
+                <h2>project</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </a>
         </div>
+
         <div class="portfolio-item">
-            <img src="z-images/" alt="">
-            <a href="z-portfolio/project10.css"><h2>Project 1</h2></a>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <a href="z-portfolio/project11.html">
+                <img src="z-images/project11.png" alt="">
+                <h2>project</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </a>
         </div>
+
         <div class="portfolio-item">
-            <img src="z-images/" alt="">
-            <a href="z-portfolio/project11.html"><h2>Project 1</h2></a>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        </div>
-        <div class="portfolio-item">
-            <img src="z-images/" alt="">
-            <a href="z-portfolio/project12.html"><h2>Project 1</h2></a>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <a href="z-portfolio/project12.html">
+                <img src="z-images/project12.png" alt="">
+                <h2>project</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </a>
         </div>
     </section>
 
     <footer>
-        <p>&copy; 2023 Graci Edinger</p>
+        <p>&copy; 2023 Graci Edinger Portfolio</p>
     </footer>
 </body>
 </html>
