--- a/z-portfolio/project3.html
+++ b/z-portfolio/project3.html
@@ -5,24 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="portfolio.css" rel="stylesheet">
     <link href="portfolio1img.css" rel="stylesheet">
+    <link rel="stylesheet" href="/z-css/nav-footer.css">
     <title>Character Concept</title>
 </head>
-<body>
-    <nav class="navbar">
+<body>   
+  <header>
+    <nav>
         <div class="logo">
-            <a href="index.html">MyLogo</a>
+            <img src="logo.png" alt="">
         </div>
         <ul class="nav-links">
-            <li><a href="/index.html">Home</a></li>
+            <li><a href="/home.html">Home</a></li>
             <li><a href="/portfolio.html">Portfolio</a></li>
             <li><a href="/photo.html">Photo's</a></li>
-            <li><a href="/about">About</a></li>
+            <li><a href="/about.html">About</a></li>
             <li><a href="/contact.html">Contact</a></li>
         </ul>
     </nav>
-    <header>
-        <h1>Character Concept</h1>
-    </header>
+  </header>
+
+  <header class="title">
+    <h1>Character Concept</h1>
+  </header>
+    
     <section class="project">
         <div class="project-details">
             <h2>Homicidal Hopper</h2>
