--- a/z-portfolio/project4.html
+++ b/z-portfolio/project4.html
@@ -4,24 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="portfolio.css" rel="stylesheet">
-    <title>Style Guide</htitle>
+    <link rel="stylesheet" href="/z-css/nav-footer.css">
+    <title>Style Guide</title>
 </head>
-<body>
-    <nav class="navbar">
+<body>   
+  <header>
+    <nav>
         <div class="logo">
-            <a href="index.html">MyLogo</a>
+            <img src="logo.png" alt="">
         </div>
         <ul class="nav-links">
-            <li><a href="/index.html">Home</a></li>
+            <li><a href="/home.html">Home</a></li>
             <li><a href="/portfolio.html">Portfolio</a></li>
             <li><a href="/photo.html">Photo's</a></li>
-            <li><a href="/about">About</a></li>
+            <li><a href="/about.html">About</a></li>
             <li><a href="/contact.html">Contact</a></li>
         </ul>
     </nav>
-    <header>
-        <h1>Style Guide</h1>
-    </header>
+  </header>
+
+  <header class="title">
+    <h1>Style Guide</h1>
+  </header>
 
     <section class="project">
         <div class="project-details">
@@ -46,7 +50,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2023 Graci Edinger</p>
+        <p>&copy; 2023 Graci Edinger Portfolio</p>
     </footer>
 </body>
 </html>
