--- a/z-portfolio/project9.html
+++ b/z-portfolio/project9.html
@@ -4,25 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="portfolio.css" rel="stylesheet">
-    <title>Project!</title>
+    <link rel="stylesheet" href="/z-css/nav-footer.css">
+    <title>Project</title>
 </head>
-<body>
-    <nav class="navbar">
+<body>   
+  <header>
+    <nav>
         <div class="logo">
-            <a href="index.html">MyLogo</a>
+            <img src="logo.png" alt="">
         </div>
         <ul class="nav-links">
-            <li><a href="/index.html">Home</a></li>
+            <li><a href="/home.html">Home</a></li>
             <li><a href="/portfolio.html">Portfolio</a></li>
             <li><a href="/photo.html">Photo's</a></li>
-            <li><a href="/about">About</a></li>
+            <li><a href="/about.html">About</a></li>
             <li><a href="/contact.html">Contact</a></li>
         </ul>
     </nav>
-    <header>
-        <h1>Portfolio</h1>
-    </header>
+  </header>
 
+  <header class="title">
+    <h1>Project</h1>
+  </header>
+
+    <section class="project">
+        <div class="project-details">
+            <h2>project</h2>
+            <p>Description of the graphic design project goes here. You can provide details about the project, including the objectives, design process, and any challenges you faced.</p>
+        </div>
+
+        <div class="photo-gallery">
+            <div class="gallery-item">
+                <img src="images/portfolio" alt="Graphic Design Project 1">
+        </div>
     <footer>
         <p>&copy; 2023 My Home Page</p>
     </footer>
