--- a/z-portfolio/project11.html
+++ b/z-portfolio/project11.html
@@ -14,7 +14,7 @@
             <img src="logo.png" alt="">
         </div>
         <ul class="nav-links">
-            <li><a href="/home.html">Home</a></li>
+            <li><a href="/index.html">Home</a></li>
             <li><a href="/portfolio.html">Portfolio</a></li>
             <li><a href="/photo.html">Photo's</a></li>
             <li><a href="/about.html">About</a></li>
