--- a/exercises/e-commerce-site-2/index.html
+++ b/exercises/e-commerce-site-2/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Tailored Spooks</title>
+        <title>Gothic Galore</title>
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     </head>
@@ -14,7 +14,7 @@
             </div>
             <div class="middle-bar">
                 <div class="logo">
-                    <a href="index.html">Tailored Spooks</a>
+                    <a href="index.html">Gothic Galore</a>
                 </div>
                 <nav class="main-nav">
                     <ul>
@@ -40,7 +40,7 @@
             </div>
         </header>
         
-         <!-- Hero Section -->
+    <!-- Hero Section -->
     <section class="hero">
         <h1>Welcome to Edgy Clothing</h1>
         <p>Discover the latest in Halloween fashion!</p>
@@ -48,64 +48,47 @@
     </section>
 
     <!-- Product Categories Section -->
-    <section class="product-categories">
-        <!-- Category 1 -->
-        <div class="category">
-            <h2>Costumes</h2>
-            <div class="product-image">
-                <img src="images/costume1.jpg" alt="Category 1 Image 1" class="hover-image">
-                <img src="images/costume2.jpg" alt="Category 1 Image 2" class="hover-target">
+    <section class="product-category">
+        <h2>Top Product Categories</h2>
+        <section class="product-categories">
+            <div class="category-card">
+                <div class="card-image">
+                    <img src="images/costume1.jpg" alt="Category 1 Image">
+                </div>
+                <div class="card-content">
+                    <h2>Costumes</h2>
+                </div>
             </div>
-        </div>
-        
-        <!-- Category 2 -->
-        <div class="category">
-            <h2>Outdoor Decorations</h2>
-            <div class="product-image">
-                <img src="images/decor1.jpg" alt="Category 2 Image 1" class="hover-image">
-                <img src="images/decor3.jpg" alt="Category 2 Image 2" class="hover-target">
+            <div class="category-card">
+                <div class="card-image">
+                    <img src="images/decor1.jpg" alt="Category 2 Image">
+                </div>
+                <div class="card-content">
+                    <h2>Outdoor Decorations</h2>
+                </div>
             </div>
-        </div>
-        <!-- Add more categories as needed -->
+        </section>
+    </section>  
+
+ <!-- Featured Products Gallery Section -->
+    <section class="featured-products">
+        <h2>Featured Products</h2>
+        <section class="featured-gallery">
+            <div class="product">
+                <img src="images/item1.jpg" alt="Product 1">
+                <h3>Product 1</h3>
+            </div>
+            <div class="product">
+                <img src="images/item2.jpg" alt="Product 2">
+                <h3>Product 2</h3>
+            </div>
+            <div class="product">
+                <img src="images/item3.jpg" alt="Product 3">
+                <h3>Product 3</h3>
+            </div>
+        </section>
     </section>
 
-       <!-- Featured Products Section -->
-       <section class="featured-products">
-        <h2>Featured Products</h2>
-        <!-- Featured Product Gallery -->
-        <div class="featured-gallery">
-            <!-- Row 1 -->
-            <div class="gallery-row">
-                <div class="gallery-item">
-                    <img src="images/item1.jpg" alt="Product 1">
-                </div>
-                <div class="gallery-item">
-                    <img src="images/item2.jpg" alt="Product 2">
-                </div>
-                <div class="gallery-item">
-                    <img src="images/item3.jpg" alt="Product 3">
-                </div>
-                <div class="gallery-item">
-                    <img src="images/item3.jfif" alt="Product 4">
-                </div>
-            </div>
-            <!-- Row 2 -->
-            <div class="gallery-row">
-                <div class="gallery-item">
-                    <img src="product5.jpg" alt="Product 5">
-                </div>
-                <div class="gallery-item">
-                    <img src="product6.jpg" alt="Product 6">
-                </div>
-                <div class="gallery-item">
-                    <img src="product7.jpg" alt="Product 7">
-                </div>
-                <div class="gallery-item">
-                    <img src="product8.jpg" alt="Product 8">
-                </div>
-            </div>
-        </div>
-    </section>
 
     <!-- Creator Showcase Section -->
     <section class="creator-showcase">
