--- a/exercises/foxtail-farms/market.html
+++ b/exercises/foxtail-farms/market.html
@@ -88,7 +88,7 @@
         </div>
 
         <footer class="footer">
-            <div class="footer-left bordered-rectangle"> 
+            <div class="footer-left bordered-rectangle"> <!-- Apply the bordered-rectangle class here -->
                 <div class="footer-logo">
                     <img src="images/small-logo.png" alt="Logo">
                 </div>
@@ -97,20 +97,13 @@
                 </div>
             </div>
             <div class="footer-middle">
-                <ul class="nav-links">
+                <ul class="footer-links">
                     <li><a href="#">Science</a></li>
                     <li><a href="#">About Us</a></li>
                     <li><a href="#">Recipes</a></li>
                     <li><a href="#">Contact</a></li>
                     <li><a href="#">Market</a></li>
                 </ul>
-                <div class="footer-social">
-                    <ul class="social-links">
-                        <li><a href="#"><img src="facebook-icon.png" alt="Facebook"></a></li>
-                        <li><a href="#"><img src="twitter-icon.png" alt="Twitter"></a></li>
-                        <li><a href="#"><img src="instagram-icon.png" alt="Instagram"></a></li>
-                    </ul>
-                </div>
                 <div class="footer-subscribe">
                     <h4>Subscribe to Our Newsletter</h4>
                     <form action="#">
@@ -119,11 +112,19 @@
                     </form>
                 </div>
             </div>
+
             <div class="footer-right">
                 <div class="footer-contact">
                     <h4>Contact Us</h4>
                     <p>Email: example@email.com</p>
                     <p>Phone: +1234567890</p>
+                </div>
+                <div class="footer-social">
+                    <ul class="social-links">
+                        <li><a href="#"><i class="fa-brands fa-facebook" style="color: #ffffff;"></i></li>
+                        <li><i class="fa-brands fa-facebook" style="color: #ffffff;"></i></li>
+                        <li><i class="fa-brands fa-instagram" style="color: #ffffff;"></i></li>
+                    </ul>
                 </div>
             </div>
         </footer>
