--- a/exercises/foxtail-farms/index.html
+++ b/exercises/foxtail-farms/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Foxtail Farms</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="css/parts.css">
         <link rel="stylesheet" href="css/index.css">
     </head>
@@ -32,32 +33,35 @@
             <p>Welcome to Foxtail Farms! We are thrilled to have you here and invite you to explore our website, where you'll discover the enchanting world of sustainable agriculture and our dedication to providing the finest and freshest ingredients from the heart of our farm to your table.</p>
             <a href="about-us.html" class="btn">About Us</a>
         </div>
-        <div class="logo">
+        <div class="logo-header">
             <img src="images/logoblack.png" alt="Logo">
         </div>
     </header>
 
     <!-- Section 2: Feature Cards -->
-    <section class="feature-cards">
+    <section class="feature-card">
         <h2>Our Technology</h2>
-        <div class="card">
-            <h2>Natural Energy</h2>
-            <img src="images/wind.jpg" alt="Product 1">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            <a href="#" class="btn">Learn More</a>
+        <div class="feature-cards">
+            <div class="card">
+                <h2>Natural Energy</h2>
+                <img src="images/wind.jpg" alt="Product 1">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <a href="#" class="btn">Learn More</a>
+            </div>
+            <div class="card">
+                <h2>Genetics</h2>
+                <img src="images/genetics.jpg" alt="Product 2">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <a href="#" class="btn">Learn More</a>
+            </div>
+            <div class="card">
+                <h2>Patents</h2>
+                <img src="images/book.jpg" alt="Product 3">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <a href="#" class="btn">Learn More</a>
+            </div>
         </div>
-        <div class="card">
-            <h2>Genetics</h2>
-            <img src="images/genetics.jpg" alt="Product 2">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            <a href="#" class="btn">Learn More</a>
-        </div>
-        <div class="card">
-            <h2>Patents</h2>
-            <img src="images/book.jpg" alt="Product 3">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            <a href="#" class="btn">Learn More</a>
-        </div>
+        
     </section>
 
     <!-- Section 3: Title with Description and Button -->
@@ -74,8 +78,8 @@
 
     <!-- Section 4: Recipe Cards -->
     <section class="recipe">
+        <h2>Featured Recipes</h2>
         <div class="recipe-cards">
-            <h2>Featured Recipes</h2>
             <div class="card">
                 <h2>Recipe 1</h2>
                 <img src="recipe1.jpg" alt="Recipe 1">
@@ -122,20 +126,13 @@
                 </div>
             </div>
             <div class="footer-middle">
-                <ul class="nav-links">
+                <ul class="footer-links">
                     <li><a href="#">Science</a></li>
                     <li><a href="#">About Us</a></li>
                     <li><a href="#">Recipes</a></li>
                     <li><a href="#">Contact</a></li>
                     <li><a href="#">Market</a></li>
                 </ul>
-                <div class="footer-social">
-                    <ul class="social-links">
-                        <li><a href="#"><img src="facebook-icon.png" alt="Facebook"></a></li>
-                        <li><a href="#"><img src="twitter-icon.png" alt="Twitter"></a></li>
-                        <li><a href="#"><img src="instagram-icon.png" alt="Instagram"></a></li>
-                    </ul>
-                </div>
                 <div class="footer-subscribe">
                     <h4>Subscribe to Our Newsletter</h4>
                     <form action="#">
@@ -144,11 +141,19 @@
                     </form>
                 </div>
             </div>
+
             <div class="footer-right">
                 <div class="footer-contact">
                     <h4>Contact Us</h4>
                     <p>Email: example@email.com</p>
                     <p>Phone: +1234567890</p>
+                </div>
+                <div class="footer-social">
+                    <ul class="social-links">
+                        <li><a href="#"><i class="fa-brands fa-facebook" style="color: #ffffff;"></i></li>
+                        <li><i class="fa-brands fa-facebook" style="color: #ffffff;"></i></li>
+                        <li><i class="fa-brands fa-instagram" style="color: #ffffff;"></i></li>
+                    </ul>
                 </div>
             </div>
         </footer>
