--- a/exercises/foxtail-farms/index.html
+++ b/exercises/foxtail-farms/index.html
@@ -117,7 +117,7 @@
     </header>
         
         <footer class="footer">
-            <div class="footer-left bordered-rectangle"> <!-- Apply the bordered-rectangle class here -->
+            <div class="footer-left bordered-rectangle"> 
                 <div class="footer-logo">
                     <img src="images/small-logo.png" alt="Logo">
                 </div>
