--- a/exercises/foxtail-farms/market.html
+++ b/exercises/foxtail-farms/market.html
@@ -88,7 +88,7 @@
         </div>
 
         <footer class="footer">
-            <div class="footer-left bordered-rectangle"> <!-- Apply the bordered-rectangle class here -->
+            <div class="footer-left bordered-rectangle">
                 <div class="footer-logo">
                     <img src="images/small-logo.png" alt="Logo">
                 </div>
