--- a/exercises/foxtail-farms/index.html
+++ b/exercises/foxtail-farms/index.html
@@ -10,7 +10,8 @@
     </head>
     <body>
     <!-- Nav Bar -->
-        <nav class="navbar">
+    <nav class="navbar">
+        <div class="navbar-content">
             <div class="logo">
                 <a href="index.html">
                 <img src="images/small-logo.png" alt="Logo">    
@@ -24,7 +25,8 @@
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="market.html">Market</a></li>
             </ul>
-        </nav>
+        </div>
+    </nav>
 
             <!-- Section 1: Welcome Header -->
     <header class="welcome-header">
@@ -46,19 +48,19 @@
                 <h2>Natural Energy</h2>
                 <img src="images/wind.jpg" alt="Product 1">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                <a href="#" class="btn">Learn More</a>
+                <a href="science.html#energy" class="btn">Learn More</a>
             </div>
             <div class="card">
                 <h2>Genetics</h2>
                 <img src="images/genetics.jpg" alt="Product 2">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                <a href="#" class="btn">Learn More</a>
+                <a href="science.html#genetics" class="btn">Learn More</a>
             </div>
             <div class="card">
                 <h2>Patents</h2>
                 <img src="images/book.jpg" alt="Product 3">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                <a href="#" class="btn">Learn More</a>
+                <a href="science.html#patent" class="btn">Learn More</a>
             </div>
         </div>
         
