--- a/exercises/foxtail-farms/market.html
+++ b/exercises/foxtail-farms/market.html
@@ -9,7 +9,8 @@
     </head>
     <body>
     <!-- Nav Bar -->
-        <nav class="navbar">
+    <nav class="navbar">
+        <div class="navbar-content">
             <div class="logo">
                 <a href="index.html">
                 <img src="images/small-logo.png" alt="Logo">    
@@ -23,7 +24,8 @@
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="market.html">Market</a></li>
             </ul>
-        </nav>
+        </div>
+    </nav>
 
         <header class="page-header">
             <h1>Market</h1>
