--- a/exercises/foxtail-farms/science.html
+++ b/exercises/foxtail-farms/science.html
@@ -9,6 +9,7 @@
     </head>
     <body>
     <!-- Nav Bar -->
+    <div class="top-square">
         <nav class="navbar">
             <div class="navbar-content">
                 <div class="logo">
@@ -40,6 +41,8 @@
                 </header>
             </div>
         </nav>
+    </div>
+        
 
         
 
