--- a/exercises/foxtail-farms/science.html
+++ b/exercises/foxtail-farms/science.html
@@ -10,13 +10,11 @@
     <body>
     <!-- Nav Bar -->
     <div class="top-square">
-        <nav class="navbar">
             <div class="navbar-content">
                 <div class="logo">
                     <a href="index.html">
                     <img src="images/small-logo.png" alt="Logo">    
                     </a>
-                    
                 </div>
                 <ul class="nav-links">
                     <li><a href="science.html">Science</a></li>
@@ -40,7 +38,7 @@
                     </div>
                 </header>
             </div>
-        </nav>
+            <nav class="navbar"></nav>
     </div>
         
 
