--- a/exercises/foxtail-farms/index.html
+++ b/exercises/foxtail-farms/index.html
@@ -119,7 +119,8 @@
     </header>
         
         <footer class="footer">
-            <div class="footer-left bordered-rectangle"> 
+            <div class="footer-left"> 
+                <div class="light-box"></div>
                 <div class="footer-logo">
                     <img src="images/small-logo.png" alt="Logo">
                 </div>
