--- a/exercises/noir-rebellion/sales.html
+++ b/exercises/noir-rebellion/sales.html
@@ -4,40 +4,54 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <title>Document</title>
+        <title>Noir Rebellion | Sale</title>
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/sales.css">
     </head>
     <body>
 <!-- Navbar -->
-    <nav class="navbar">
-        <div class="brand"><a href="index.html">Nior Rebellion</a></div>
-        <ul class="nav-links">
-            <li><a href="#">All</a></li>
-            <li><a href="#">New</a></li>
-            <li><a href="#">Rings</a></li>
-            <li><a href="#">Earrings</a></li>
-            <li><a href="#">Chains</a></li>
-            <li><a href="#">Sale</a></li>
-        </ul>
-        <div class="icons">
-            <div class="search-icon"><i class="fa-solid fa-magnifying-glass" style="color: #ffffff;"></i></div>
-            <div class="bell-icon"><i class="fa-solid fa-bell" style="color: #ffffff;"></i></div>
-            <div class="profile">
-                <i class="fa-solid fa-user" style="color: #ffffff;"></i>
-                <div class="dropdown">
-                    <div class="login">Login</div>
-                    <div class="signup">Signup</div>
-                </div>
+<nav class="navbar">
+    <div class="brand"><a href="index.html">Nior Rebellion</a></div>
+    <ul class="nav-links">
+        <li><a href="all.html">All</a></li>
+        <li><a href="new.html">New</a></li>
+        <li><a href="rings.html">Rings</a></li>
+        <li><a href="earrings.html">Earrings</a></li>
+        <li><a href="chains.html">Chains</a></li>
+        <li><a href="sales.html">Sale</a></li>
+    </ul>
+    <div class="icons">
+        <div class="search-icon"><i class="fa-solid fa-magnifying-glass" style="color: #ffffff;"></i></div>
+        <div class="search-bar">
+            <input type="text" placeholder="Search...">
+            <div class="search-line"></div>
+        </div>
+        <div class="bell-icon"><i class="fa-solid fa-bell" style="color: #ffffff;"></i></div>
+        <div class="profile">
+            <i class="fa-solid fa-user" style="color: #ffffff;"></i>
+            <div class="dropdown">
+                <div class="login">Login</div>
+                <div class="signup">Signup</div>
             </div>
         </div>
-    </nav>
+    </div>
+</nav>
 
     <header>
         <h1>Sales Page</h1>
     </header>
 
-    <section class="item-gallery">
+    <section class="gallery">
+        <div class="sort-filter">
+            <select id="sort-select">
+                <option value="all"> </option>
+                <option value="best-seller">Best Seller</option>
+                <option value="top-rated">Top Rated</option>
+                <option value="lowest-price">Lowest Price</option>
+                <option value="highest-price">Highest Price</option>
+            </select>
+        </div>
+        <div class="item-gallery">
         <!-- Item Cards -->
         <div class="item-card">
             <img src="images/item3.jpg" alt="Item 1">
@@ -134,7 +148,9 @@
                 <span class="stars">&#9733;&#9733;&#9733;&#9733;&#9733;</span>
                 <span class="review-count">(25 reviews)</span>
             </div>
+        </div>    
         </div>
+        
         
 
     </section>
@@ -182,5 +198,6 @@
         </div>
     </footer>
 
+    <script src="script.js"></script>
         </body>
     </html>
