--- a/exercises/noir-rebellion/index.html
+++ b/exercises/noir-rebellion/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <title>Document</title>
+        <title>Noir Rebellion | Home</title>
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/index.css">
     </head>
@@ -13,15 +13,19 @@
     <nav class="navbar">
         <div class="brand"><a href="index.html">Nior Rebellion</a></div>
         <ul class="nav-links">
-            <li><a href="#">All</a></li>
-            <li><a href="#">New</a></li>
-            <li><a href="#">Rings</a></li>
-            <li><a href="#">Earrings</a></li>
-            <li><a href="#">Chains</a></li>
+            <li><a href="all.html">All</a></li>
+            <li><a href="new.html">New</a></li>
+            <li><a href="rings.html">Rings</a></li>
+            <li><a href="earrings.html">Earrings</a></li>
+            <li><a href="chains.html">Chains</a></li>
             <li><a href="sales.html">Sale</a></li>
         </ul>
         <div class="icons">
             <div class="search-icon"><i class="fa-solid fa-magnifying-glass" style="color: #ffffff;"></i></div>
+            <div class="search-bar">
+                <input type="text" placeholder="Search...">
+                <div class="search-line"></div>
+            </div>
             <div class="bell-icon"><i class="fa-solid fa-bell" style="color: #ffffff;"></i></div>
             <div class="profile">
                 <i class="fa-solid fa-user" style="color: #ffffff;"></i>
