--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="z-css/home.css">
     <link rel="stylesheet" href="z-css/nav-footer.css">
-    <title>Rebel Portfolio</title>
+    <title>Graci Edinger Portfolio</title>
 </head>
 <body>
     <header>
