--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,7 @@
             <li><a href="portfolio.html">Portfolio</a></li>
             <li><a href="photo.html">Photo's</a></li>
             <li><a href="about.html">About</a></li>
+            <li><a href="https://dev-graci-edinger-blog.pantheonsite.io/">Blog</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
