--- a/exercises/resturant/index.html
+++ b/exercises/resturant/index.html
@@ -11,7 +11,7 @@
             <nav>
                 <div class="logo">
                     <img src="">
-                    <h1>Al Patro</h1>
+                    <a href="index.html"><h1>Al Patro</h1></a>
                 </div>
                 <ul class="menu">
                     <li><a href="menu.html">Menu</a></li>
@@ -26,7 +26,7 @@
             <div class="hero-content">
                 <h1>Welcome to Our Restaurant</h1>
                 <p>Discover the finest dining experience.</p>
-                <a href="#" class="btn">Explore Menu</a>
+                <a href="menu.html#menu" class="btn">Explore Menu</a>
             </div>
         </section>
         
