--- a/final-eval/index.html
+++ b/final-eval/index.html
@@ -32,14 +32,14 @@
             <section class="image-section">
                 <div class="image-container">
                     <img src="images/jaguars-1.jpg" alt="Image 1">
-                    <p>Image 1 Description</p>
+                    <p>The Jacksonville Jaguars are an NFL football team based in Jacksonville, Florida, known for their teal and black color scheme.</p>
                 </div>
                 <div class="vs-container">
                     <span>VS</span>
                 </div>
                 <div class="image-container">
                     <img src="images/seahawks-1.jpg" alt="Image 2">
-                    <p>Image 2 Description</p>
+                    <p>The Seattle Seahawks are an NFL football team based in Seattle, Washington, recognized for their distinctive blue and green uniforms and a passionate fan base known as the "12th Man."</p>
                 </div>
             </section>
 
