--- a/about.html
+++ b/about.html
@@ -23,16 +23,11 @@
             </ul>
         </nav>
     </header>
-    <header class="title">
-        <h1>About Me</h1>
-    </header>
+    
 
-    <section class="about">
-        <div class="about-image">
-            <img src="z-images/about-me-image.jpg" alt="Profile Image">
-        </div>
-        <div class="about-card">
-        <div class="about-content">
+    <div class="about-container">
+        <div class="about-text">
+            <h1>Who is Graci Edinger?</h1>
             <p>
                 I've always had a creative side to me, but have always been a bit of a computer nerd. So I found the best of the both worlds!
             </p>
@@ -40,8 +35,25 @@
                 Around 5 to 7 years ago, I experienced a captivating immersion into the world of photography. This initial fascination subsequently sparked a journey of exploration into the realm of Lightroom, which seamlessly propelled me into the realm of Adobe products. Gradually, I embarked on a self-guided process of mastering their applications in a versatile manner. Periodically, I engaged in projects intended for sale and beyond. As time progressed, the notion crystallized that this could potentially evolve into a lifelong pursuit. And so, here I stand today, driven by the realization that photography could indeed shape my enduring path.
             </p>
         </div>
+        <div class="image-container">
+            <img src="z-images/about-me-image.jpg" alt="Your Name">
         </div>
-    </section>
+    </div>
+    <div class="divider"></div>
+    <div class="resume">
+         <!--<h2></h2>-->
+        <h3>Skills</h3>
+        <ul>
+            <li>Web Development</li>
+            <li>Graphic Design</li>
+            <li>Project Management</li>
+            <li>Team Collaboration</li>
+            <li>Illustrator</li>
+            <li>Photoshop</li>
+            <li>Adobe XD</li>
+            <li>Photography</li>
+        </ul>
+    </div>
 
     <footer class="footer">
         <div class="footer-left">
