--- a/z-portfolio/project4.html
+++ b/z-portfolio/project4.html
@@ -8,7 +8,7 @@
     <title>Style Guide</title>
 </head>
 <body>   
-  <header>
+    <header class="nav">
     <nav>
         <div class="logo">
             <img src="z-images/logo.png" alt="">
