--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="z-css/nav-footer.css">
 </head>
 <body>
-    <header>
+    <header class="nav">
         <nav>
             <div class="logo">
                 <img src="z-images/logo.png" alt="">
