--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <title>Contact</title>
 </head>
 <body>   
-  <header>
+  <header class="nav">
     <nav>
         <div class="logo">
           <img src="z-images/logo.png" alt="">
