--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Graci Edinger Portfolio</title>
 </head>
 <body>
-    <header>
+    <header class="nav">
         <nav>
             <div class="logo">
               <img src="z-images/logo.png" alt="">
