--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
     <title>Portfolio</title>
 </head>
 <body>
-    <header>
+    <header class="nav">
         <nav>
             <div class="logo">
                 <img src="z-images/logo.png" alt="">
