--- a/z-portfolio/project1.html
+++ b/z-portfolio/project1.html
@@ -9,7 +9,7 @@
     <title>Website GUI Design</title>
 </head>
 <body>   
-  <header>
+    <header class="nav">
     <nav>
         <div class="logo">
             <img src="z-images/logo.png" alt="">
