--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
   <header class="nav">
     <nav>
         <div class="logo">
-          <img src="z-images/logo.png" alt="">
+          <a href="index.html"><img src="z-images/logo.png" alt=""></a>
         </div>
         <ul class="nav-links">
           <li><a href="index.html">Home</a></li>
